--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "admin-lte": "^3.0.0-alpha.2",
         "@fortawesome/fontawesome-free": "^5.10.1",
-        "font-awesome": "^4.7.0"
+        "admin-lte": "^3.0.0-alpha.2",
+        "font-awesome": "^4.7.0",
+        "vue-router": "^3.1.2"
     }
 }
